<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_registration"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:elevation="30dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_login_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:elevation="30dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_main_login_facebook"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button"
        android:elevation="30dp"
        android:padding="12dp"
        android:text="@string/main_login_facebook"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_main_discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="204dp"
        android:text="@string/main_discover"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_login_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.037" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="106dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pom_logo_white" />

</androidx.constraintlayout.widget.ConstraintLayout>